# ConcreteAbstracts

./: .gitignore  CMakeLists.txt  README.md  build.sh  componentsWar.md  run.sh
Planning/: componentsWar.md  ideas(discord)
include/: AbstractCountry.h  Air.h  AllyRegistry.h  ArmoryFacade.h  AttackVessel.h  AttackWeapon.h  AttackWeaponCreator.h  Barricades.h  BattleGround.h  BattleRegistry.h  Citizens.h  ConcreteDispute.h  Country.h  CountryHistory.h  CountryMemento.h  Dispute.h  ExplosiveWeaponCreator.h  ExplosiveWeapons.h  Government.h  Guardian.h  Iterator.h  JetCreator.h  Jets.h  Land.h  Marine.h  Medic.h  MeleeWeaponCreator.h  MeleeWeapons.h  Mines.h  NuclearWeaponCreator.h  NuclearWeapons.h  People.h  Pilot.h  RangedWeaponCreator.h  RangedWeapons.h  RecruitIterator.h  Recruits.h  RecuiterContext.h  Refugee.h  Registry.h  (+24 more)
include/util/: UnorderedPair.hpp
src/: AbstractCountry.cpp  Air.cpp  AllyRegistry.cpp  ArmoryFacade.cpp  AttackVessel.cpp  AttackWeaponCreator.cpp  Barricades.cpp  BattleGround.cpp  BattleRegistry.cpp  Citizens.cpp  ConcreteDispute.cpp  Country.cpp  CountryHistory.cpp  CountryMemento.cpp  ExplosiveWeaponCreator.cpp  ExplosiveWeapons.cpp  Government.cpp  Guardian.cpp  Iterator.cpp  JetCreator.cpp  Jets.cpp  Land.cpp  Marine.cpp  Medic.cpp  MeleeWeaponCreator.cpp  MeleeWeapons.cpp  Mines.cpp  NuclearWeaponCreator.cpp  NuclearWeapons.cpp  People.cpp  Pilot.cpp  RangedWeaponCreator.cpp  RangedWeapons.cpp  RecruitIterator.cpp  Recruits.cpp  RecuiterContext.cpp  Refugee.cpp  Sea.cpp  ShipCreator.cpp  Ships.cpp  (+20 more)
src/include/: AttackVessel.h  Country.h  SuppliesTransport.h  Transport.h  TransportContext.h  WeaponTransport.h
testSrc/: testMain.cpp
